# guild

./: .editorconfig  .env.example  .gitattributes  .gitignore  BACKLOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  agentdesk.yaml  go.mod  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  redocly.yaml
.speakeasy/: README.md  gen.yaml
conformance/: README.md  adapter-profile.schema.json
deploy/: README.md  docker-compose.local.yml  otel-collector.yaml
docs/: AGENT_FIRST_PIVOT_PLAN.md  BRAND_NARRATIVE.md  DEMO_AGENT_WORK_CONTRACT.md  IMPLEMENTATION_PLAN.md  LANDING_PAGE_COPY.md  LAUNCH_NARRATIVE.md  MCP_SETUP.md  NAMING_DECISION.md  RELEASE_CHECKLIST.md  ROADMAP.md  TS_FIRST_AGENTDESK_PLAN.md  quickstart.md
examples/: README.md  api-demo.http  replay-suite.example.json
launch/: README.md  demo-script.md  demo-transcript.md  external-dogfood-transcript.md  landing-page.md  quiet-alpha-outreach.md  starter-issues.md  v0.1.0-alpha.1-notes.md  v0.1.0-alpha.2-notes.md  v0.1.0-alpha.3-notes.md  v0.1.0-alpha.4-notes.md
openapi/: README.md  guild.v1alpha1.yaml
scripts/: agentdesk-ts.sh  check-doc-links.mjs  e2e.sh  generate-typescript-spec.mjs  release-check.sh  simulation.sh  smoke.sh  validate-adapter-profiles.mjs  validate-fixture-refs.mjs  validate-spec.mjs
sdk/: GENERATION.md
sdk/python/: README.md  pyproject.toml
sdk/python/src/guild_client/: __init__.py  client.py
sdk/python/tests/: test_client.py
server/: README.md
spec/: README.md  approval-request.schema.json  artifact.schema.json  common.schema.json  (+10 more)
(+112 files in other folders)
