[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guild-client"
version = "0.1.0"
description = "Python client for the Guild control plane"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.package-dir]
"" = "src"
